some change was added

--- a/src/index.html
+++ b/src/index.html
@@ -39,10 +39,14 @@
             <div class="header__place2">
               <div class="button">
                 <div class="button__title">КВИТКИ</div>
-                <a href="#" class="button__link"></a>
+                <a href="#actions" class="button__link"></a>
               </div>
             </div>
           </div>
+
+          <a href="#actions" class="header__link">
+            <img src="./images/header/1.svg" alt="action">
+          </a>
 
           <div class="header__img"></div>
         </div>
@@ -289,6 +293,8 @@
                 type="email"
                 class="subscr__input"
                 placeholder="E-mail"
+                required
+                title="обовязкове поле"
               >
 
               <button
