Finall commit after first review

--- a/src/index.html
+++ b/src/index.html
@@ -168,7 +168,7 @@
               <img 
                 src="./images/event_1.jpg" 
                 alt="Йду і повертаюсь"
-                class="event__image"
+                class="events__image"
               >
             </div>
             
@@ -215,7 +215,7 @@
               <img 
                 src="./images/event_2.jpg" 
                 alt="І спогади і мрії"
-                class="event__image"
+                class="events__image"
               >
             </div>
 
