some problem was fixed

--- a/src/index.html
+++ b/src/index.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <html lang="en" class="page">
   <head>
+    <link
+    rel="stylesheet"
+    href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css"
+    >
     <link 
       rel="shortcut icon"
       href="./img/favicon.svg"
@@ -220,6 +224,7 @@
               </div>
             </div>
           </div>
+
           <div class="slider__buttons">
             <button class="slider__button slider__button--1"></button>
             <button class="slider__button slider__button--2"></button>
@@ -434,6 +439,7 @@
       </div>
     </footer>
 
+    <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
     <script type="text/javascript" src="scripts/main.js"></script>
   </body>
 </html>
