--- a/src/index.html
+++ b/src/index.html
@@ -75,7 +75,7 @@
       </div>
     </header>
 
-    <nav class="menu" id="menu">
+    <nav class="menu page__body--with-menu" id="menu">
       <div class="menu__green">
         <div class="container">
           <div class="menu__content">
