--- a/src/index.html
+++ b/src/index.html
@@ -11,8 +11,10 @@
       type="logo__img"
       href="./images/NA MU.svg"
     >
-
+    <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css">
     <link rel="stylesheet" href="./styles/main.scss">
+
+
 
   </head>
   <body class="page__body">
@@ -223,72 +225,44 @@
           <h2 class="page__section-title" >
             Галерея
           </h2>
-          <div class="slideshow-container">
-            <div class="mySlides fade">
-              <img
-                class="img_slides"
-                src="./images/gallery1.png"
-                alt="photo1"
-              >
+          <div class="swiper">
+            <div class="swiper-wrapper">
+              <div class="swiper-slide fade">
+                <img
+                  class="img_slides"
+                  src="./images/gallery1.png"
+                  alt="photo1"
+                >
+              </div>
+              <div class="swiper-slide fade">
+                <img
+                  class="img_slides"
+                  src="./images/gallery2.png" alt="photo2">
+              </div>
+              <div class="swiper-slide fade">
+                <img
+                  class="img_slides"
+                  src="./images/gallery3.png" alt="photo3">
+              </div>
+              <div class="swiper-slide fade">
+                <img
+                  class="img_slides"
+                  src="./images/gallery4.png" alt="photo4">
+              </div>
             </div>
-            <div class="mySlides fade">
-              <img
-                class="img_slides"
-                src="./images/gallery2.png" alt="photo2">
-            </div>
-            <div class="mySlides fade">
-              <img
-                class="img_slides"
-                src="./images/gallery3.png" alt="photo3">
-            </div>
-            <div class="mySlides fade">
-              <img
-                class="img_slides"
-                src="./images/gallery4.png" alt="photo4">
+            <div class="swiper-pagination">
+
             </div>
           </div>
-          <div class="dot_item">
-            <span class="dot" onclick="currentSlide(1)"></span>
-            <span class="dot" onclick="currentSlide(2)"></span>
-            <span class="dot" onclick="currentSlide(3)"></span>
-            <span class="dot" onclick="currentSlide(4)"></span>
-          </div>
 
-          <script>
-            var slideIndex = 1;
-            showSlides(slideIndex);
 
-            function plusSlides(n) {
-              showSlides(slideIndex += n);
-            }
-
-            function currentSlide(n) {
-              showSlides(slideIndex = n);
-            }
-
-            function showSlides(n) {
-              var i;
-              var slides = document.getElementsByClassName("mySlides");
-              var dots = document.getElementsByClassName("dot");
-              if (n > slides.length) {slideIndex = 1}
-              if (n < 1) {slideIndex = slides.length}
-              for (i = 0; i < slides.length; i++) {
-                  slides[i].style.display = "none";
-              }
-              for (i = 0; i < dots.length; i++) {
-                  dots[i].className = dots[i].className.replace(" active", "");
-              }
-              slides[slideIndex-1].style.display = "block";
-              dots[slideIndex-1].className += " active";
-            }
-          </script>
           <div class="gallery__place">
             <div class="gallery__photos">
               <div class="grid">
                 <div class="grid__item  grid__item--desktop-1-4">
                   <div class="gallery__photo-container">
                     <img
-                      src="./images/gallery1.png"
+                      src="./images/Photo11.png"
                       alt="photo1"
                       class="gallery__photo"
                     >
@@ -521,6 +495,8 @@
       </div>
     </footer>
 
+    <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
+    <script src="scripts/swiper-bundle.js"></script>
     <script type="text/javascript" src="scripts/main.js"></script>
 
   </body>
