--- a/src/index.html
+++ b/src/index.html
@@ -62,7 +62,9 @@
               grid__item--tablet-1-2
               grid__item--desktop-3-5"
             >
-            <div class="header__button--text">квитки</div>
+            <div class="header__button--text">
+              квитки
+            </div>
             <div class="header__button--square"></div>
           </a>
         </div>
