--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,153 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ua" class="page">
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Title</title>
+    <link rel="icon" href="images/icons/logo.svg">
     <link rel="stylesheet" href="./styles/main.scss">
   </head>
-  <body>
-    <h1>Hello Mate Academy</h1>
+  <body class="page__body">
+    <div class="menu" id="menu">
+      <div class="container">
+        <a
+          href="#"
+          class="icon icon--close"
+        >
+        </a>
+
+        <div class="menu__content">
+          <div class="menu__nav">
+            <ul class="menu__list">
+              <li class="menu__item">
+                <a
+                  href="#galery"
+                  class="menu__link"
+                >
+                  Галерея
+                </a>
+              </li>
+
+              <li class="menu__item">
+                <a
+                  href="#events"
+                  class="menu__link"
+                >
+                  Виставки та події
+                </a>
+              </li>
+            </ul>
+
+            <ul class="menu__list">
+              <li class="menu__item">
+                <a
+                  href="#about"
+                  class="menu__link"
+                >
+                  Про Нас
+                </a>
+              </li>
+
+              <li class="menu__item">
+                <a
+                  href="#contact"
+                  class="menu__link"
+                >
+                  Контакти
+                </a>
+              </li>
+            </ul>
+          </div>
+
+          <div class="menu__schedule">
+            <div class="menu__time">
+              <p class="menu__time--title">
+                Графік роботи
+              </p>
+
+              <p class="menu__time--timetable">
+                <span class="bold">12:00 — 20:00</span> середа<br>
+                <span class="bold">12:00 — 20:00</span> четвер<br>
+                <span class="bold">12:00 — 20:00</span> п’ятниця<br>
+                <span class="bold">11:00 — 19:00</span> субота<br>
+                <span class="bold">11:00 — 19:00</span> неділя<br>
+              </p>
+            </div>
+
+            <div class="menu__weekend">
+              <span class="bold">Вихідні:</span> понеділок, вівторок<br>
+              Каса припиняє роботу за 1 годину
+              до закриття музею
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <header class="header">
+      <div class="container">
+        <div class="header__content grid">
+          <div class="header__name
+            grid--tablet--1-4
+            grid--desktop--1-6
+          ">
+            <a
+              href="#menu"
+              class="icon icon--menu header__icon-menu--desctop"
+            >
+            </a>
+
+            <h1 class="header__title">
+              ХУДОЖНІЙ МУЗЕЙ
+            </h1>
+          </div>
+
+
+          <div class="header__ticket
+            grid--tablet--1-4
+            grid--desktop--3-6
+          ">
+            <div class="header__ticket--name">КВИТКИ</div>
+
+            <a
+              href="#"
+              class="button button--green header__button"
+            >
+            </a>
+          </div>
+
+          <div class="header__events">
+            <img
+              src="images/icons/palka.svg"
+              alt="rectangle"
+              class="header__events--rectangle"
+            >
+
+            <a href="#">
+              події
+            </a>
+          </div>
+
+          <div class="header__image
+            grid--tablet--4-7
+            grid--desktop--6-13
+          ">
+            <a
+              href="#menu"
+              class="icon icon--menu header__icon-menu--phone"
+            >
+            </a>
+
+            <img
+              src="images/icons/logo.svg"
+              alt="logo"
+              class="header__logo logo"
+            >
+          </div>
+        </div>
+      </div>
+    </header>
+
     <script type="text/javascript" src="scripts/main.js"></script>
   </body>
 </html>
