--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,11 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;400;500;600;700&family=Montserrat:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./styles/main.scss">
-    <script type="text/javascript" src="scripts/main.js"></script>
+    <link
+     rel="stylesheet"
+     href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css"
+    >
+    <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
   </head>
   <body class="page__body">
     <header class="header">
@@ -26,16 +30,16 @@
           </div>
           <div class="header__bg"></div>
           <div class="grid">
-            <div class="grid__item grid__item--mobile-1-2 grid__item--desktop-1-5">
+            <div class="grid__item grid__item--mobile-1-2 grid__item--tablet-1-3 grid__item--desktop-1-5">
               <h1 class="header__title">
                 ХУДОЖНІЙ
                 <br>
                 МУЗЕЙ
               </h1>
             </div>
-            <div class="grid__item grid__item--mobile-1-2 grid__item--desktop-3-5">
+            <div class="grid__item grid__item--mobile-1-2 grid__item--tablet-1-3 grid__item--desktop-3-5">
               <a href="#" class="header__button">
-                КВИТКИ
+                  КВИТКИ
               </a>
             </div>
             <div class="grid__item grid__item--desktop-1-1">
@@ -50,7 +54,7 @@
       <div class="container">
         <div class="menu__content">
           <div class="grid">
-            <div class="grid__item grid__item--mobile-1-2 grid__item--desktop-2-5">
+            <div class="grid__item grid__item--mobile-1-2 grid__item--tablet-1-3 grid__item--desktop-2-5">
               <div class="menu__section">
                 <a href="#" class="icon icon--cross"
                   >
@@ -74,7 +78,7 @@
                 <div class="menu__line"></div>
               </div>
             </div>
-            <div class="grid__item grid__item--mobile-1-2 grid__item--desktop-8-11">
+            <div class="grid__item grid__item--mobile-1-2 grid__item--tablet-4-6 grid__item--desktop-8-11">
               <div class="menu__schedule schedule">
                 <div class="schedule__title schedule__title--menu">Графік роботи</div>
                 <div class="menu_schedule-details">
@@ -116,11 +120,11 @@
           </h2>
           <div class="events__event event">
             <div class="grid grid-event">
-              <div class="grid__item grid__item--mobile-1-2 grid__item--desktop-1-7">
-                <img src="./images/photos/actual_1.png" alt="Event 1"
+              <div class="grid__item grid__item--mobile-1-2 grid__item--tablet-1-6 grid__item--desktop-1-7">
+                <img src="./images/photos/actual_1.webp" alt="Event 1"
                 class="event__photo">
               </div>
-              <div class="grid__item grid__item--mobile-1-2 grid__item--desktop-9-12">
+              <div class="grid__item grid__item--mobile-1-2 grid__item--tablet-1-4 grid__item--desktop-9-12">
                 <div class="event__info">
                   <div class="event__data">
                     <div class="event__type">ВИСТАВКА
@@ -138,11 +142,12 @@
           </div>
           <div class="events__event event">
             <div class="grid grid-event">
-              <div class="grid__item grid__item--mobile-1-2 grid__item--desktop-1-7">
-                <img src="./images/photos/actual_2.png" alt="Event 1"
+              <div class="grid__item grid__item--mobile-1-2 grid__item--tablet-1-6
+              grid__item--desktop-1-7">
+                <img src="./images/photos/actual_2.webp" alt="Event 1"
                 class="event__photo">
               </div>
-              <div class="grid__item grid__item--mobile-1-2 grid__item--desktop-9-12">
+              <div class="grid__item grid__item--mobile-1-2 grid__item--tablet-1-4 grid__item--desktop-9-12">
                 <div class="event__info">
                   <div class="event__data">
                     <div class="event__type">ВИСТАВКА
@@ -160,7 +165,7 @@
           </div>
         </div>
         <div class="events_event-lecture event">
-          <img src="./images/photos/romantizm.png"
+          <img src="./images/photos/romantizm.webp"
           alt="Lecture" class="event__photo-lecture">
           <div class="container">
             <div class="event__info-lecture">
@@ -173,11 +178,96 @@
           </div>
         </div>
       </section>
+      <section class="page__section gallery" id="gallery">
+        <div class="container">
+          <h2 class="page__section-title">Галерея</h2>
+          <div class="gallery__photos">
+            <div class="grid">
+              <div class="grid__item grid__item--mobile-1-2
+              grid__item--desktop-1-4 grid__item--tablet-1-2">
+                <img
+                  src="./images/photos/photo_1.webp"
+                  alt="gallery-photo 1"
+                  class="gallery__photo"
+                >
+              </div>
+              <div class="grid__item grid__item--mobile-1-2 grid__item--desktop-5-12
+              grid__item--tablet-3-6">
+                <img
+                  src="./images/photos/photo_2.webp"
+                  alt="gallery-photo 2"
+                  class="gallery__photo"
+                >
+              </div>
+              <div class="grid__item grid__item--mobile-1-2 grid__item--desktop-1-8 grid__item--tablet-1-6">
+                <img
+                  src="./images/photos/photo_3.webp"
+                  alt="gallery-photo 3"
+                  class="gallery__photo gallery__photo-small"
+                >
+              </div>
+              <div class="grid__item grid__item--mobile-1-2 grid__item--desktop-9-12 grid__item--tablet-1-6">
+                <img
+                  src="./images/photos/photo_4.webp"
+                  alt="gallery-photo 4"
+                  class="gallery__photo gallery__photo-small"
+                >
+              </div>
+            </div>
+          </div>
+          <!--<div class="swiper">
+            <div class="swiper-wrapper">
+              <div class="swiper-slide">
+                <img
+                  src="./images/photos/photo_1.webp"
+                  alt="Photo1" class="swiper__image">
+              </div>
+              <div class="swiper-slide">
+                <img
+                  src="./images/photos/photo_2.webp"
+                  alt="Photo2" class="swiper__image">
+              </div>
+              <div class="swiper-slide">
+                <img
+                  src="./images/photos/photo_3.webp"
+                  alt="Photo3" class="swiper__image">
+              </div>
+              <div class="swiper-slide">
+                <img
+                  src="./images/photos/photo_4.webp"
+                  alt="Photo4" class="swiper__image">
+              </div>
+            </div>
+            <div class="swiper-pagination"></div>
+          </div>-->
+        </div>
+      </section>
+      <section class="page__section subscribe" id="subscribe">
+        <div class="container">
+          <div class="subscribe__container">
+            <h2 class="subscribe__title">Підписка</h2>
+            <p class="subscribe__info">Бути в курсі всіх актуальних подій та останніх новин.</p>
+          </div>
+          <form class="subscribe__form">
+            <input
+              type="email"
+              id="input"
+              name="email"
+              placeholder="E-mail"
+              class="subscribe__email"
+              required>
+            <button
+                type="submit" class="subscribe__button">
+            </button>
+          </form>
+        </div>
+      </section>
     </main>
     <footer class="footer">
       <div class="container">
         <div class="grid">
-          <div class="grid__item grid__item--mobile-1-2 grid__item--desktop-1-1">
+          <div class="grid__item grid__item--mobile-1-2
+          grid__item--tablet-1-1 grid__item--desktop-1-1">
             <div class="footer__icons">
               <a href="#" class="logo">
                 <img
@@ -191,7 +281,8 @@
               </div>
             </div>
           </div>
-          <div class="grid__item grid__item--mobile-1-1 grid__item--desktop-3-4">
+          <div class="grid__item grid__item--mobile-1-1 grid__item--tablet-2-3
+          grid__item--desktop-3-4">
             <div class="menu__schedule schedule">
               <div class="schedule__title">Графік роботи</div>
               <div class="menu_schedule-details">
@@ -221,7 +312,9 @@
               </div>
             </div>
           </div>
-          <div class="grid__item grid__item--mobile-2-2 grid__item--desktop-5-6">
+          <div class="grid__item grid__item--mobile-2-2
+          grid__item--tablet-4-5
+          grid__item--desktop-5-6">
             <div class="footer__title" id="#contacts">
               Контакти:
             </div>
@@ -247,14 +340,17 @@
             > e-mail: info@namu.kiev.ua
             </a>
           </div>
-          <div class="grid__item grid__item--mobile-1-2 grid__item--desktop-7-7">
+          <div class="grid__item grid__item--mobile-1-2 grid__item--tablet-2-5
+          grid__item--desktop-7-7">
             <div class="footer__line"></div>
           </div>
-          <div class="grid__item grid__item--mobile-1-1 grid__item--desktop-8-9">
-            <a href="#galerry" class="footer__link footer__link-nav"> Галерея</a>
+          <div class="grid__item grid__item--mobile-1-1 grid__item--tablet-2-2
+          grid__item--desktop-8-9">
+            <a href="#gallery" class="footer__link footer__link-nav"> Галерея</a>
             <a href="#events" class="footer__link footer__link-nav"> Виставки та події</a>
           </div>
-          <div class="grid__item grid__item--mobile-2-2 grid__item--desktop-10-11">
+          <div class="grid__item grid__item--mobile-2-2 grid__item--tablet-4-4
+          grid__item--desktop-10-11">
             <a href="#about-us" class="footer__link footer__link-nav"> Про Нас</a>
             <a href="#contacts" class="footer__link footer__link-nav"> Контакти</a>
           </div>
