first section was added without menu

--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,34 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="uk" class="page">
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Title</title>
+
+    <title>NAMU</title>
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;400;500;700&family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
+
     <link rel="stylesheet" href="./styles/main.scss">
+    <link rel="icon" href="./images/logo.svg">
+
+    <script src="scripts/main.js"></script>
   </head>
-  <body>
-    <h1>Hello Mate Academy</h1>
-    <script type="text/javascript" src="scripts/main.js"></script>
+  <body class="page__body">
+    <header class="header">
+      <div class="container grid">
+        <div class="top-actions">
+          <a class="icon icon--menu" href="#"></a>
+          <a class="logo" href="#"></a>
+        </div>
+        
+        <h1 class="title header__title">Художній музей</h1>
+
+        <a href="#" class="button header__button">Квитки</a>
+
+        <div class="header__item">Події</div>
+      </div>
+    </header>
   </body>
 </html>
