change grid system  in top-atcions.scss

--- a/src/index.html
+++ b/src/index.html
@@ -20,9 +20,15 @@
       <div class="container grid">
         <div class="top-actions">
           <a class="icon icon--menu" href="#"></a>
-          <a class="logo" href="#"></a>
+          <a class="logo" href="#">
+            <img
+              class="logo__image"
+              src="./images/logo.svg"
+              alt="NAMU logo"
+            >
+          </a>
         </div>
-        
+
         <h1 class="title header__title">Художній музей</h1>
 
         <a href="#" class="button header__button">Квитки</a>
