update block menu

--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="./styles/main.scss">
   </head>
   <body class="page__body">
-    <div class="menu" id="menu">
+    <div class="menu rez" id="menu">
       <div class="container">
         <a
           href="#"
@@ -58,6 +58,8 @@
               </li>
             </ul>
           </div>
+
+          <div class="menu__span"></div>
 
           <div class="menu__schedule">
             <div class="menu__time">
@@ -143,7 +145,11 @@
               alt="logo"
               class="header__logo logo"
             >
+            <div class="header__background">
+              <img src="images/1.png" alt="image">
+            </div>
           </div>
+
         </div>
       </div>
     </header>
