--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,8 @@
     <title>NAMU</title>
     <link rel="icon" href="./images/NAMU-logo.svg">
     <link rel="stylesheet" href="./styles/main.scss">
+    <link rel="stylesheet" href="https://unpkg.com/flickity@2/dist/flickity.min.css">
+    <script src="https://unpkg.com/flickity@2/dist/flickity.pkgd.min.js"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;400;500;600;700&family=Montserrat:wght@400;500;700&display=swap" rel="stylesheet">
@@ -219,45 +221,45 @@
           <h2 class="gallery__title">Галерея</h2>
         </div>
 
-        <div class="gallery__slider">
-          <div class="gallery__slide" id="slide-1">
+        <div class="gallery__slider slider">
+          <div class="slider__slide" id="slide-1">
             <img
               src="./images/photos/gallery-1.jpg"
               alt="gallery-1"
-              class="gallery__photo"
+              class="slider__photo"
             >
           </div>
 
-          <div class="gallery__slide" id="slide-2">
+          <div class="slider__slide" id="slide-2">
             <img
               src="./images/photos/gallery-2.jpg"
               alt="gallery-2"
-              class="gallery__photo"
+              class="slider__photo"
             >
           </div>
 
-          <div class="gallery__slide" id="slide-3">
+          <div class="slider__slide" id="slide-3">
             <img
               src="./images/photos/gallery-3.jpg"
               alt="gallery-3"
-              class="gallery__photo"
+              class="slider__photo"
             >
           </div>
 
-          <div class="gallery__slide" id="slide-4">
+          <div class="slider__slide" id="slide-4">
             <img
               src="./images/photos/gallery-4.jpg"
               alt="gallery-4"
-              class="gallery__photo"
+              class="slider__photo"
             >
           </div>
         </div>
 
-        <div class="gallery__nav">
-          <a href="#slide-1" class="gallery__dot"></a>
-          <a href="#slide-2" class="gallery__dot"></a>
-          <a href="#slide-3" class="gallery__dot"></a>
-          <a href="#slide-4" class="gallery__dot"></a>
+        <div class="slider__dots">
+          <a href="#slide-1" class="slider__dot dot-1 active"></a>
+          <a href="#slide-2" class="slider__dot dot-2"></a>
+          <a href="#slide-3" class="slider__dot dot-3"></a>
+          <a href="#slide-4" class="slider__dot dot-4"></a>
         </div>
 
         <div class="gallery__desktop">
@@ -359,7 +361,7 @@
       </section>
     </main>
 
-    <footer class="footer">
+    <footer class="footer" id="footer">
       <div class="container">
         <div class="grid">
           <div
@@ -376,11 +378,13 @@
                 <a
                   href="https://www.facebook.com/namu.museum/"
                   class="icon icon--facebook"
+                  target="_blank"
                 ></a>
 
                 <a
                   href="https://www.instagram.com/namu.museum/?hl=en"
                   class="icon icon--instagram"
+                  target="_blank"
                 ></a>
               </div>
             </div>
