update header button

--- a/src/index.html
+++ b/src/index.html
@@ -104,19 +104,17 @@
             </h1>
           </div>
 
-
-          <div class="header__ticket
+          <a href="#tickets" class="button header__button
             grid--tablet--1-4
-            grid--desktop--3-6
-          ">
-            <div class="header__ticket--name">КВИТКИ</div>
+            grid--desktop--3-6">
+            <div class="button__name">
+              КВИТКИ
+            </div>
 
-            <a
-              href="#"
-              class="button button--green header__button"
-            >
-            </a>
-          </div>
+            <div class="button__img">
+              <img src="images/icons/btn.svg" alt="button">
+            </div>
+          </a>
 
           <div class="header__events">
             <img
