Fixed! but still problems with button arrow

--- a/src/index.html
+++ b/src/index.html
@@ -9,11 +9,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;400;500;600;700&family=Montserrat:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./styles/main.scss">
-    <link
-     rel="stylesheet"
-     href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css"
-    >
-    <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
+    <script src="./scripts/main.js" defer></script>
   </head>
   <body class="page__body">
     <header class="header">
@@ -248,7 +244,11 @@
             <h2 class="subscribe__title">Підписка</h2>
             <p class="subscribe__info">Бути в курсі всіх актуальних подій та останніх новин.</p>
           </div>
-          <form class="subscribe__form">
+          <form
+            action="#"
+            method="post"
+            class="subscribe__form"
+            id="form-reload">
             <input
               type="email"
               id="input"
