--- a/src/index.html
+++ b/src/index.html
@@ -39,7 +39,7 @@
               </a>
             </div>
             <div class="grid__item grid__item--desktop-1-1">
-              <a href="#" class="header__link">ПОДІЇ
+              <a href="#events" class="header__link">ПОДІЇ
               </a>
             </div>
           </div>
@@ -65,10 +65,10 @@
                 </ul>
                 <ul class="menu__list">
                   <li class="menu__item">
-                    <a href="#about-us" class="menu__link">Про Нас</a>
+                    <a href="#subscribe" class="menu__link">Про Нас</a>
                   </li>
                   <li class="menu__item">
-                    <a href="#contacts" class="menu__link">Контакти</a>
+                    <a href="#subscribe" class="menu__link">Контакти</a>
                   </li>
                 </ul>
                 <div class="menu__line"></div>
@@ -274,9 +274,9 @@
                 src="./images/NAMU_svg.svg" alt="NAMU">
               </a>
               <div class="footer__socials">
-                <a href="#"
+                <a href="https://www.facebook.com/namu.museum/?locale=uk_UA"
                    class="icon icon--facebook" target="_blank"></a>
-                <a href="#"
+                <a href="https://www.instagram.com/namu.museum/"
                    class="icon icon--instagram" target="_blank"></a>
               </div>
             </div>
@@ -325,12 +325,10 @@
             </a>
             <a href="tel:+38 (044) 278-13-57"
                class="footer__link"
-               target="_blank"
             >тел. +38 (044) 278-13-57
             </a>
             <a href="tel:+38 (044) 278-74-54"
                class="footer__link"
-               target="_blank"
             >
               факс +38 (044) 278-74-54
             </a>
