--- a/src/index.html
+++ b/src/index.html
@@ -36,5 +36,83 @@
         <div class="header__item">Події</div>
       </div>
     </header>
+
+    <nav class="menu">
+      <div class="container grid">
+        <div class="menu__top-actions">
+          <a href="#" class="icon icon--cross"></a>
+
+          <ul class="menu__list">
+            <li class="menu__list-item">
+              <a href="#" class="menu__link">
+                Галерея
+              </a>
+            </li>
+
+            <li class="menu__list-item">
+              <a href="#" class="menu__link">
+                Про Нас
+              </a>
+            </li>
+
+            <li class="menu__list-item">
+              <a href="#" class="menu__link">
+                Виставки та події
+              </a>
+            </li>
+
+            <li class="menu__list-item">
+              <a href="#" class="menu__link">
+                Контакти
+              </a>
+            </li>
+          </ul>
+        </div>
+
+        <div class="menu__separator"></div>
+
+        <div class="menu__scheldue">
+          <div class="scheldue__content">
+            <p class="menu__scheldue-title">
+              Графік роботи
+            </p>
+            <ul class="menu__scheldue-list">
+              <li class="menu__scheldue-item">
+                <p class="menu__scheldue-text">
+                  <strong>12:00 — 20:00</strong> середа
+                </p>
+              </li>
+              <li class="menu__scheldue-item">
+                <p class="menu__scheldue-text">
+                  <strong>12:00 — 20:00</strong> четвер
+                </p>
+              </li>
+              <li class="menu__scheldue-item">
+                <p class="menu__scheldue-text">
+                  <strong>12:00 — 20:00</strong> п’ятниця
+                </p>
+              </li>
+              <li class="menu__scheldue-item">
+                <p class="menu__scheldue-text">
+                  <strong>11:00 — 19:00</strong> субота
+                </p>
+              </li>
+              <li class="menu__scheldue-item">
+                <p class="menu__scheldue-text">
+                  <strong>11:00 — 19:00</strong> неділя
+                </p>
+              </li>
+            </ul>
+          </div>
+
+          <p class="menu__scheldue-info">
+            <strong>Вихідні:</strong> понеділок, вівторок
+            <br>
+            Каса припиняє роботу за 1 годину
+            до закриття музею
+          </p>
+        </div>
+      </div>
+    </nav>
   </body>
 </html>
