--- a/src/index.html
+++ b/src/index.html
@@ -387,12 +387,12 @@
 
               <ul class="nav-menu__list">
                 <li class="nav-menu__item-list">
-                  <a href="#" class="nav-menu__item-link nav-menu__item-link--footer">
+                  <a href="#subscription" class="nav-menu__item-link nav-menu__item-link--footer">
                     Про Нас
                   </a>
                 </li>
                 <li class="nav-menu__item-list">
-                  <a href="#" class="nav-menu__item-link nav-menu__item-link--footer">
+                  <a href="#contact-us" class="nav-menu__item-link nav-menu__item-link--footer">
                     Контакти
                   </a>
                 </li>
