button was fixed

--- a/src/index.html
+++ b/src/index.html
@@ -41,10 +41,10 @@
             </div>
 
             <div class="header__place2">
-              <div class="button">
+              <a href="#actions" class="button">
                 <div class="button__title">КВИТКИ</div>
-                <a href="#actions" class="button__link"></a>
-              </div>
+                <div class="button__link"></div>
+              </a>
             </div>
           </div>
 
@@ -388,7 +388,7 @@
                   </a>
           
                   <a 
-                    href="fax: +38 (044) 278-74-54" class="contacts-info__contact-link"
+                    href="fax-scheme:+380.442.787454" class="contacts-info__contact-link"
                   >
                     факс +38 (044) 278-74-54
                   </a>
