--- a/src/index.html
+++ b/src/index.html
@@ -47,70 +47,69 @@
     </header>
 
     <nav class="page__menu menu" id="menu">
-      <div class="menu__container">
-        <div class="menu__content">
-          <a href="#" class="menu__ikon"></a>
-          <div class="menu__nav nav-menu">
-            <div class="nav-menu__items">
-              <ul class="nav-menu__list">
-                <li class="nav-menu__item-list">
-                  <a href="#gallery" class="nav-menu__item-link">
-                    Галерея
-                  </a>
-                </li>
-                <li class="nav-menu__item-list">
-                  <a href="#events" class="nav-menu__item-link">
-                    Виставки та події
-                  </a>
-                </li>
-              </ul>
-
-              <ul class="nav-menu__list">
-                <li class="nav-menu__item-list">
-                  <a href="#subscription" class="nav-menu__item-link">
-                    Про Нас
-                  </a>
-                </li>
-                <li class="nav-menu__item-list">
-                  <a href="#contact-us" class="nav-menu__item-link">
-                    Контакти
-                  </a>
-                </li>
-              </ul>
+      <div class="menu__box">
+        <div class="menu__container">
+          <div class="menu__content">
+            <a href="#" class="menu__ikon"></a>
+            <div class="menu__nav nav-menu">
+              <div class="nav-menu__items">
+                <ul class="nav-menu__list">
+                  <li class="nav-menu__item-list">
+                    <a href="#gallery" class="nav-menu__item-link">
+                      Галерея
+                    </a>
+                  </li>
+                  <li class="nav-menu__item-list">
+                    <a href="#events" class="nav-menu__item-link">
+                      Виставки та події
+                    </a>
+                  </li>
+                </ul>
+                <ul class="nav-menu__list">
+                  <li class="nav-menu__item-list">
+                    <a href="#subscription" class="nav-menu__item-link">
+                      Про Нас
+                    </a>
+                  </li>
+                  <li class="nav-menu__item-list">
+                    <a href="#contact-us" class="nav-menu__item-link">
+                      Контакти
+                    </a>
+                  </li>
+                </ul>
+              </div>
             </div>
           </div>
-
-        </div>
-        <div class="menu__schedule schedule-menu">
-          <div class="schedule-menu__content">
-            <div class="schedule-menu__title">
-              Графік роботи
-            </div>
-
-            <div class="schedule-menu__wrapper">
-              <ul class="schedule-menu__list">
-                <li class="schedule-menu__item-list">
-                  <span class="schedule-menu__item-list--bold"> 12:00 — 20:00</span> середа
-                </li>
-                <li class="schedule-menu__item-list">
-                  <span class="schedule-menu__item-list--bold"> 12:00 — 20:00</span> четвер
-                </li>
-                <li class="schedule-menu__item-list">
-                  <span class="schedule-menu__item-list--bold"> 12:00 — 20:00</span> п’ятниця
-                </li>
-                <li class="schedule-menu__item-list">
-                  <span class="schedule-menu__item-list--bold"> 11:00 — 19:00</span> субота
-                </li>
-                <li class="schedule-menu__item-list">
-                  <span class="schedule-menu__item-list--bold"> 12:00 — 20:00</span> неділя
-                </li>
-              </ul>
-              <p class="schedule-menu__text">
-                <span class="schedule-menu__item-list--bold">Вихідні:</span> понеділок, вівторок
-                <br>
-                Каса припиняє роботу за 1 годину
-                до закриття музею
-              </p>
+          <div class="menu__schedule schedule-menu">
+            <div class="schedule-menu__content">
+              <div class="schedule-menu__title">
+                Графік роботи
+              </div>
+              <div class="schedule-menu__wrapper">
+                <ul class="schedule-menu__list">
+                  <li class="schedule-menu__item-list">
+                    <span class="schedule-menu__item-list--bold"> 12:00 — 20:00</span> середа
+                  </li>
+                  <li class="schedule-menu__item-list">
+                    <span class="schedule-menu__item-list--bold"> 12:00 — 20:00</span> четвер
+                  </li>
+                  <li class="schedule-menu__item-list">
+                    <span class="schedule-menu__item-list--bold"> 12:00 — 20:00</span> п’ятниця
+                  </li>
+                  <li class="schedule-menu__item-list">
+                    <span class="schedule-menu__item-list--bold"> 11:00 — 19:00</span> субота
+                  </li>
+                  <li class="schedule-menu__item-list">
+                    <span class="schedule-menu__item-list--bold"> 12:00 — 20:00</span> неділя
+                  </li>
+                </ul>
+                <p class="schedule-menu__text">
+                  <span class="schedule-menu__item-list--bold">Вихідні:</span> понеділок, вівторок
+                  <br>
+                  Каса припиняє роботу за 1 годину
+                  до закриття музею
+                </p>
+              </div>
             </div>
           </div>
         </div>
@@ -172,7 +171,7 @@
           <div class="classicism__content">
             <div class="classicism__info scheduly-events">
               <div class="scheduly-events__exhibition">ЛЕКЦІЯ</div>
-              <div class="scheduly-events__date">26.08-29.11.2019</div>
+              <div class="scheduly-events__date">26/08/2019 - 11:00</div>
             </div>
             <h3 class="classicism__title subtitle-events">
               Від класицизму до романтизму
