--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,405 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="page">
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Title</title>
+    <title>Museum</title>
+    <link rel="icon"
+          type="image/x-icon"
+          href="/images/favicon.svg"
+    >
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;400;500;600;700&family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./styles/main.scss">
   </head>
-  <body>
-    <h1>Hello Mate Academy</h1>
+  <body class="page__body">
+    <header id="header" class="header">
+      <div class="container">
+        <a href="#" class="logo">
+          <img
+            src="./images/logo.svg"
+            class="logo__image"
+            alt="Namu"
+          >
+        </a>
+
+        <nav>
+          <div class="menu">
+            <input class="menu__input" type="checkbox">
+
+            <span class="menu__span"></span>
+            <span class="menu__span"></span>
+            <span class="menu__span"></span>
+
+            <div class="menu__nav">
+              <ul class="menu__list">
+                <li class="menu__item">
+                  <a href="#gallery" class="menu__link">Галерея</a>
+                  <a href="#exhibitions" class="menu__link">Виставки та <br> події</a>
+                </li>
+                <li class="menu__item">
+                  <a href="#subscription" class="menu__link">Про Нас</a>
+                  <a href="#footer" class="menu__link">Контакти</a>
+                </li>
+              </ul>
+
+              <div class="work-schedule">
+                <div class="work-schedule__title">
+                  Графік роботи
+                </div>
+
+                <div class="work-schedule__content">
+                  <ul class="work-schedule__list">
+                    <li class="work-schedule__item">
+                      <span class="work-schedule__time">12:00 - 20:00</span> середа
+                    </li>
+                    <li class="work-schedule__item">
+                      <span class="work-schedule__time">12:00 - 20:00</span> четвер
+                    </li>
+                    <li class="work-schedule__item">
+                      <span class="work-schedule__time">12:00 - 20:00</span> п'ятниця
+                    </li>
+                    <li class="work-schedule__item">
+                      <span class="work-schedule__time">11:00 - 19:00</span> субота
+                    </li>
+                    <li class="work-schedule__item">
+                      <span class="work-schedule__time">11:00 - 19:00</span> неділя
+                    </li>
+                  </ul>
+
+                  <p class="work-schedule__description">
+                    <span class="work-schedule__time">Вихідні:</span> понеділок, вівторок <br>
+                    Каса припиняє роботу за 1 годину
+                    до закриття музею
+                  </p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </nav>
+      </div>
+    </header>
+
+    <main class="page__main">
+      <section id="museum-art" class="museum-art">
+        <div class="container">
+          <h1 class="museum-art__title">
+            ХУДОЖНІЙ МУЗЕЙ
+          </h1>
+
+          <div class="museum-art__tickets-container">
+            <div class="museum-art__tickets">
+              КВИТКИ
+            </div>
+
+            <button type="button" class="museum-art__button"></button>
+          </div>
+        </div>
+      </section>
+
+      <section id="exhibitions" class="exhibitions">
+        <div class="container">
+          <h2 class="exhibitions__title">
+            Актуальні події
+          </h2>
+
+          <div class="exhibitions__cards">
+            <div class="exhibitions__card">
+              <div class="exhibitions__card-image-container">
+                <img
+                  class="exhibitions__card-image"
+                  src="./images/exhibitions/picture-1.png"
+                  alt="picture-1"
+                >
+              </div>
+
+              <articl class="exhibitions__card-articl">
+                <div class="date-container">
+                  <span>ВИСТАВКА</span>
+
+                  <div class="date">
+                    26.08-29.11.2019
+                  </div>
+                </div>
+
+                <h3 class="exhibitions__card-title">
+                  Йду і повертаюсь
+                </h3>
+
+                <p class="exhibitions__card-description">
+                  Національний Художній Музей України презентує унікальну частину колекції Градобанку - українське мистецтво другої половини 1980-1995 років.
+                </p>
+              </articl>
+            </div>
+
+            <div class="exhibitions__card">
+              <div class="exhibitions__card-image-container">
+                <img
+                  class="exhibitions__card-image"
+                  src="./images/exhibitions/picture-2.png"
+                  alt="picture-1"
+                >
+              </div>
+
+              <articl class="exhibitions__card-articl">
+                <div class="date-container">
+                  <span>ВИСТАВКА</span>
+
+                  <div class="date">
+                    26.08-29.11.2019
+                  </div>
+                </div>
+
+                <h3 class="exhibitions__card-title">
+                  І спогади і мрії
+                </h3>
+
+                <p class="exhibitions__card-description">
+                  Національний художній музей України до 100 річчя від дня народження   видатної української художниці  Тетяни Яблонської  відкриває ретроспективну ювілейну виставку «І спогади і мрії».
+                </p>
+              </articl>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <section id="lectures" class="lectures">
+        <div class="container">
+          <div class="lectures__container">
+            <div class="lectures__content">
+              <div class="date-container date-container--lectures">
+                <span>ЛЕКЦІЯ</span>
+
+                <div class="date">
+                  26/08/2019 - 11:00
+                </div>
+              </div>
+
+              <h2 class="lectures__title">
+                Від класицизму до романтизму
+              </h2>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <section id="gallery" class="gallery">
+        <div class="container">
+          <div class="gallery__title">
+            Галерея
+          </div>
+
+          <div class="gallery__slides">
+            <input
+              class="gallery__input"
+              type="radio" id="slide-1"
+              name="slide"
+              checked
+            >
+            <input
+              class="gallery__input"
+              type="radio"
+              id="slide-2"
+              name="slide"
+            >
+            <input
+              class="gallery__input"
+              type="radio"
+              id="slide-3"
+              name="slide"
+            >
+            <input
+              class="gallery__input"
+              type="radio"
+              id="slide-4"
+              name="slide"
+            >
+
+            <div class="gallery__slides-container">
+              <div class="gallery__slider-container">
+                <img
+                  class="gallery__slider"
+                  src="./images/gallery/slide-1.png"
+                  alt="slide-1"
+                >
+              </div>
+
+              <div class="gallery__slider-container">
+                <img
+                  class="gallery__slider"
+                  src="./images/gallery/slide-2.png"
+                  alt="slide-2"
+                >
+              </div>
+
+              <div class="gallery__slider-container">
+                <img
+                  class="gallery__slider"
+                  src="./images/gallery/slide-3.png"
+                  alt="slide-3"
+                >
+              </div>
+
+              <div class="gallery__slider-container">
+                <img
+                  class="gallery__slider"
+                  src="./images/gallery/slide-4.png"
+                  alt="slide-4"
+                >
+              </div>
+            </div>
+
+            <div class="gallery__buttons">
+              <label class="gallery__button" for="slide-1"></label>
+
+              <label class="gallery__button" for="slide-2"></label>
+
+              <label class="gallery__button" for="slide-3"> </label>
+
+              <label class="gallery__button" for="slide-4"></label>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <section id="subscription" class="subscription">
+        <div class="container">
+          <div class="subscription__title">
+            Підписка
+          </div>
+
+          <div class="subscription__description">
+            Бути в курсі всіх актуальних подій та останніх новин.
+          </div>
+
+          <form
+            action="#"
+            method="post"
+            class="subscription__form"
+          >
+            <label class="subscription__input-container" for="email">
+              <input
+                class="subscription__input"
+                type="email"
+                name="subscription"
+                id="email"
+                placeholder="E-mail"
+                required
+              >
+              <button type="submit" class="subscription__input-button"></button>
+            </label>
+          </form>
+        </div>
+      </section>
+
+      <footer id="footer" class="footer">
+        <div class="container">
+          <div class="footer__content">
+            <div class="footer__contacts">
+              <div class="footer__logo-container">
+                <a href="#" class="logo logo--footer">
+                  <img
+                    src="./images/logo.svg"
+                    class="logo__image"
+                    alt="Namu"
+                  >
+                </a>
+
+                <div class="footer__socials">
+                  <a
+                    href="https://www.facebook.com/"
+                    class="footer__social"
+                    target="_blank"
+                  >
+                    <img
+                      src="./images/socials/facebook.svg" class="footer__social--facebook"
+                      alt="Facebook"
+                    >
+                  </a>
+
+                  <a
+                    href="https://www.instagram.com/"
+                    class="footer__social"
+                    target="_blank"
+                  >
+                    <img
+                      src="./images/socials/instagram.svg" class="footer__social--instagram"
+                      alt="Instagram"
+                    >
+                  </a>
+                </div>
+              </div>
+
+              <div class="footer__work-schedule-container">
+                <div class="work-schedule work-schedule--footer">
+                  <div class="work-schedule__title">
+                    Графік роботи
+                  </div>
+
+                  <div class="work-schedule__content work-schedule__content--footer">
+                    <ul class="work-schedule__list">
+                      <li class="work-schedule__item">
+                        <span class="work-schedule__time">12:00 - 20:00</span> середа
+                      </li>
+                      <li class="work-schedule__item">
+                        <span class="work-schedule__time">12:00 - 20:00</span> четвер
+                      </li>
+                      <li class="work-schedule__item">
+                        <span class="work-schedule__time">12:00 - 20:00</span> п'ятниця
+                      </li>
+                      <li class="work-schedule__item">
+                        <span class="work-schedule__time">11:00 - 19:00</span> субота
+                      </li>
+                      <li class="work-schedule__item">
+                        <span class="work-schedule__time">11:00 - 19:00</span> неділя
+                      </li>
+                    </ul>
+
+                    <p class="work-schedule__description work-schedule__description--footer">
+                      <span class="work-schedule__time">Вихідні:</span> понеділок, вівторок <br>
+                      Каса припиняє роботу за 1 годину
+                      до закриття музею
+                    </p>
+                  </div>
+                </div>
+
+                <div class="footer__contact">
+                  <div class="footer__contact-title">Контакти:</div>
+
+                  <p>
+                    вул. М. Грушевського, 6; <br> Київ, 01001
+                    <br>тел. +38 (044) 278-13-57
+                    <br>факс +38 (044) 278-74-54
+                    <br>e-mail: info@namu.kiev.ua
+                  </p>
+                </div>
+              </div>
+
+              <a class="footer__button" href="#header"></a>
+            </div>
+
+            <div class="footer__menu">
+              <ul class="footer__menu-list">
+                <li class="footer__menu-item">
+                  <a href="#gallery" class="footer__menu-link">Галерея</a>
+                  <a href="#exhibitions" class="footer__menu-link">Виставки та події</a>
+                </li>
+                <li class="footer__menu-item">
+                  <a href="#subscription" class="footer__menu-link">Про Нас</a>
+                  <a href="#footer" class="footer__menu-link">Контакти</a>
+                </li>
+              </ul>
+            </div>
+          </div>
+
+          <div class="footer__description">
+            <div>Designed by Zhyriada Marina</div>
+            <div>Copyright © 2019. All Rights Reserved.</div>
+          </div>
+        </div>
+      </footer>
+    </main>
     <script type="text/javascript" src="scripts/main.js"></script>
   </body>
 </html>
