--- a/src/index.html
+++ b/src/index.html
@@ -19,7 +19,7 @@
     <header class="header">
       <div class="container grid">
         <div class="top-actions">
-          <a class="icon icon--menu" href="#"></a>
+          <a class="icon icon--menu" href="#menu"></a>
           <a class="logo" href="#">
             <img
               class="logo__image"
@@ -37,7 +37,7 @@
       </div>
     </header>
 
-    <nav class="menu">
+    <nav class="menu" id="menu">
       <div class="container grid">
         <div class="menu__top-actions">
           <a href="#" class="icon icon--cross"></a>
@@ -68,8 +68,6 @@
             </li>
           </ul>
         </div>
-
-        <div class="menu__separator"></div>
 
         <div class="menu__scheldue">
           <div class="scheldue__content">
@@ -114,5 +112,8 @@
         </div>
       </div>
     </nav>
+
+    <main>
+    </main>
   </body>
 </html>
