changes landing NU MU

--- a/src/index.html
+++ b/src/index.html
@@ -219,10 +219,10 @@
             </div>
 
             <div class="gallery__slider">
-              <a href="images/slider/slider-dark.svg" class="gallery__link-slider"></a>
-              <a href="images/slider/slider-light.svg" class="gallery__link-slider"></a>
-              <a href="images/slider/slider-light.svg" class="gallery__link-slider"></a>
-              <a href="images/slider/slider-light.svg" class="gallery__link-slider"></a>
+              <a href="#" class="gallery__link-slider"></a>
+              <a href="#" class="gallery__link-slider"></a>
+              <a href="#" class="gallery__link-slider"></a>
+              <a href="#" class="gallery__link-slider"></a>
             </div>
           </div>
         </div>
