fixed the issues

--- a/src/index.html
+++ b/src/index.html
@@ -93,7 +93,7 @@
               КВИТКИ
             </div>
 
-            <button type="button" class="museum-art__button"></button>
+            <a href="#exhibitions" class="museum-art__button"></a>
           </div>
         </div>
       </section>
@@ -364,15 +364,21 @@
                   </div>
                 </div>
 
-                <div class="footer__contact">
+                <div class="footer__contact-container">
                   <div class="footer__contact-title">Контакти:</div>
 
-                  <p>
-                    вул. М. Грушевського, 6; <br> Київ, 01001
-                    <br>тел. +38 (044) 278-13-57
-                    <br>факс +38 (044) 278-74-54
-                    <br>e-mail: info@namu.kiev.ua
-                  </p>
+                  <address class="footer__contact">
+                    <a
+                      class="footer__contact-link"
+                      href="https://goo.gl/maps/4amZxXcC3eha1WQr9"
+                      target="_blank"
+                    >
+                      вул. М. Грушевського, 6; <br> Київ, 01001
+                    </a><br>
+                    <a class="footer__contact-link" href="tel:+38 (044) 278-13-57">тел. +38 (044) 278-13-57</a><br>
+                    <a class="footer__contact-link" href="fax:+38 (044) 278-74-54">факс +38 (044) 278-74-54</a><br>
+                    <a class="footer__contact-link" href="mailto:info@namu.kiev.ua">e-mail: info@namu.kiev.ua</a>
+                  </address>
                 </div>
               </div>
 
