--- a/src/index.html
+++ b/src/index.html
@@ -18,11 +18,11 @@
   <body class="page__body">
     <header class="header">
       <div class="container grid">
-        <div class="top-actions">
+        <div class="header__top-actions">
           <a class="icon icon--menu" href="#menu"></a>
-          <a class="logo" href="#">
+          <a class="header__logo" href="#">
             <img
-              class="logo__image"
+              class="header__logo-image"
               src="./images/logo.svg"
               alt="NAMU logo"
             >
@@ -56,7 +56,7 @@
             </li>
 
             <li class="menu__list-item">
-              <a href="#" class="menu__link">
+              <a href="#current-events" class="menu__link">
                 Виставки та події
               </a>
             </li>
@@ -114,6 +114,87 @@
     </nav>
 
     <main>
+      <section class="page__section current-events" id="current-events">
+        <div class="container grid">
+          <h2 class="title page__section-title">
+            Актуальні події
+          </h2>
+
+          <article class="current-events__article">
+            <img
+              class="current-events__article-image"
+              src="./images/currentEventFirst.jpg"
+              alt="Йду і повертаюсь"
+            >
+
+            <div class="current-events__article-additional">
+              <p class="current-events__article-additional-name">
+                Виставка
+              </p>
+
+              <p class="current-events__article-additional-date">
+                26.08-29.11.2019
+              </p>
+            </div>
+
+            <h3 class="title current-events__article-title">
+              Йду і повертаюсь
+            </h3>
+
+            <p class="current-events__article-text">
+              Національний Художній Музей України презентує
+              унікальну частину колекції Градобанку -
+              українське мистецтво другої половини 1980-1995 років.
+            </p>
+          </article>
+
+          <article class="current-events__article current-events__article-next">
+            <img
+              class="current-events__article-image"
+              src="./images/currentEventSecond.jpg"
+              alt="І спогади і мрії"
+            >
+
+            <div class="current-events__article-additional">
+              <p class="current-events__article-additional-name">
+                Виставка
+              </p>
+
+              <p class="current-events__article-additional-date">
+                26.08-29.11.2019
+              </p>
+            </div>
+
+            <h3 class="title current-events__article-title">
+              І спогади і мрії
+            </h3>
+
+            <p class="current-events__article-text">
+              Національний художній музей України до 100 річчя від дня народження
+              видатної української художниці  Тетяни Яблонської  відкриває ретроспективну ювілейну виставку «І спогади і мрії».
+            </p>
+          </article>
+        </div>
+      </section>
+
+      <section class="lecture">
+        <div class="container grid">
+          <div class="lecture__content">
+            <div class="lecture__additional">
+              <p class="lecture__name">
+                Лекція
+              </p>
+              <p class="lecture__date">
+                26/08/2019 - 11:00
+              </p>
+            </div>
+
+            <h2 class="title lecture__title">
+              Від класицизму до романтизму
+            </h2>
+          </div>
+        </div>
+      </section>
     </main>
   </body>
 </html>
