--- a/src/index.html
+++ b/src/index.html
@@ -312,31 +312,21 @@
               </a>
 
               <div class="contacts-us__link-container">
-                <a
-                  class="contacts-us__face-link"
-                  href="https://www.facebook.com/namu.museum/"
-                >
-                  <svg
-                    xmlns="http://www.w3.org/2000/svg"
-                    width="12"
-                    height="24"
-                    viewbox="0 0 12 24"
-                    fill="none"
+                <a class="contacts-us__link" href="https://www.facebook.com/namu.museum/">
+                  <img
+                    src="../src/images/Facebook.png"
+                    alt="facebook"
+                    class="contacts-us__face-img"
                   >
-                    <path
-                      xmlns="http://www.w3.org/2000/svg"
-                      d="M2.80699 4.64899C2.80699 5.2538 2.80699 7.9533 2.80699 7.9533H0.389923V11.9938H2.80699V24.0009H7.77217V11.9942H11.104C11.104 11.9942 11.4161 10.0568 11.5673 7.93841C11.1337 7.93841 7.79094 7.93841 7.79094 7.93841C7.79094 7.93841 7.79094 5.58776 7.79094 5.17573C7.79094 4.76282 8.3323 4.2074 8.86736 4.2074C9.40141 4.2074 10.5286 4.2074 11.5726 4.2074C11.5726 3.65727 11.5726 1.75647 11.5726 0.000976577C10.1789 0.000976577 8.59331 0.000976577 7.8944 0.000976577C2.68426 0.000697581 2.80699 4.04524 2.80699 4.64899Z" fill="black">
-                  </svg>
+
                 </a>
-                <a href="https://www.instagram.com/namu.museum/">
-                  <svg
-                    xmlns="http://www.w3.org/2000/svg"
-                    viewbox="0 0 50 50"
-                    width="24px"
-                    height="24px"
+
+                <a class="contacts-us__link" href="https://www.instagram.com/namu.museum/">
+                  <img
+                    src="../src/images/instagram.png"
+                    alt="instagram"
+                    class="contacts-us__insta-img"
                   >
-                    <path d="M 16 3 C 8.83 3 3 8.83 3 16 L 3 34 C 3 41.17 8.83 47 16 47 L 34 47 C 41.17 47 47 41.17 47 34 L 47 16 C 47 8.83 41.17 3 34 3 L 16 3 z M 37 11 C 38.1 11 39 11.9 39 13 C 39 14.1 38.1 15 37 15 C 35.9 15 35 14.1 35 13 C 35 11.9 35.9 11 37 11 z M 25 14 C 31.07 14 36 18.93 36 25 C 36 31.07 31.07 36 25 36 C 18.93 36 14 31.07 14 25 C 14 18.93 18.93 14 25 14 z M 25 16 C 20.04 16 16 20.04 16 25 C 16 29.96 20.04 34 25 34 C 29.96 34 34 29.96 34 25 C 34 20.04 29.96 16 25 16 z">
-                  </svg>
                 </a>
               </div>
             </div>
@@ -427,8 +417,8 @@
               </div>
 
               <div class="navigation contacts-us__navigation">
-                <ul class="navigation__list ">
-                  <li class="navigation__item ">
+                <ul class="navigation__list navigation__list--footer">
+                  <li class="navigation__item navigation__item--footer">
                     <a
                       class="navigation__link"
                       href="#gallery">
@@ -436,7 +426,7 @@
                     </a>
                   </li>
 
-                  <li class="navigation__item">
+                  <li class="navigation__item navigation__item--footer">
                     <a
                     class="navigation__link"
                     href="#about-us">
@@ -444,7 +434,7 @@
                     </a>
                   </li>
 
-                  <li class="navigation__item ">
+                  <li class="navigation__item navigation__item--footer">
                     <a
                       class="navigation__link"
                       href="#events">
@@ -452,7 +442,7 @@
                     </a>
                   </li>
 
-                  <li class="navigation__item ">
+                  <li class="navigation__item navigation__item--footer">
                     <a
                       class="navigation__link"
                       href="#contacts">
