--- a/src/index.html
+++ b/src/index.html
@@ -60,23 +60,23 @@
             <div class="navigation">
               <ul class="navigation__list">
                 <li class="navigation__item">
-                  <a class="navigation__link navigation__link--color_white" href="#gallery">
+                  <a class="navigation__link navigation__link--header" href="#gallery">
                     Галерея
                   </a>
                 </li>
 
                 <li class="navigation__item">
-                  <a class="navigation__link navigation__link--color_white" href="#about-us">
+                  <a class="navigation__link navigation__link--header" href="#about-us">
                     Про нас
                   </a>
                 </li>
 
                 <li class="navigation__item">
-                  <a class="navigation__link navigation__link--color_white" href="#events">Виставки та події</a>
+                  <a class="navigation__link navigation__link--header" href="#events">Виставки та події</a>
                 </li>
 
                 <li class=" navigation__item">
-                  <a class="navigation__link navigation__link--color_white" href="#contacts">
+                  <a class="navigation__link navigation__link--header" href="#contacts">
                     Контакти
                   </a>
                 </li>
@@ -312,7 +312,10 @@
               </a>
 
               <div class="contacts-us__link-container">
-                <a class="contacts-us__link" href="https://www.facebook.com/namu.museum/">
+                <a
+                  class="contacts-us__link"
+                  href="https://www.facebook.com/namu.museum/"
+                  target="blank">
                   <img
                     src="../src/images/Facebook.png"
                     alt="facebook"
@@ -321,7 +324,11 @@
 
                 </a>
 
-                <a class="contacts-us__link" href="https://www.instagram.com/namu.museum/">
+                <a
+                  class="contacts-us__link"
+                  href="https://www.instagram.com/namu.museum/"
+                  target="blank"
+                >
                   <img
                     src="../src/images/instagram.png"
                     alt="instagram"
@@ -406,7 +413,7 @@
                   </a>
 
                   <a
-                    href="maito:info@namu.kiev.ua"
+                    href="mailto:info@namu.kiev.ua"
                     class="contacts__contact">
                     e-mail: info@namu.kiev.ua
                   </a>
