--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Національний художній музей України</title>
     <link rel="stylesheet" href="./styles/main.scss">
-    <link rel="shortcut icon" href="images/favicon.svg" type="image/x-icon">
+    <link
+      rel="shortcut icon"
+      href="images/favicon.svg"
+      type="image/x-icon"
+    >
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -14,7 +18,44 @@
       rel="stylesheet"
     >
   </head>
-  <body>
+  <body class="page">
+    <header class="header page__header">
+      <img
+        src="images/gallery/NAMU.jpg"
+        alt="NAMU"
+        class="header__image"
+      >
+
+      <a href="#nav" class="header__icon"></a>
+
+      <a href="#" class="header__logo">
+        NA
+        <br>
+        MU
+      </a>
+
+      <h1 class="header__title">
+        ХУДОЖНІЙ МУЗЕЙ
+      </h1>
+
+      <a href="#" class="header__link">
+        <p class="header__text">
+          КВИТКИ
+        </p>
+
+        <div class="header__square">
+          <img src="images/icons/white-arrow.svg" alt="Tickets" class="header__arrow">
+        </div>
+      </a>
+
+      <h4 class="header__subtitle">
+        ПОДІЇ
+      </h4>
+    </header>
+
+    <main class="main page__main">
+      
+    </main>
 
     <script type="text/javascript" src="scripts/main.js"></script>
   </body>
